--- a/Pantarevir/Base.lproj/Main.storyboard
+++ b/Pantarevir/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Forgot Password View Controller-->
@@ -36,24 +37,94 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_moreblur" translatesAutoresizingMaskIntoConstraints="NO" id="zZm-qX-chb">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="20" y="0.0" width="560" height="600"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="swK-2Z-crr">
-                                <rect key="frame" x="249" y="145" width="102" height="59"/>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="34"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ZP-QQ-Bql">
+                                <rect key="frame" x="20" y="512" width="560" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Registrera dig"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fz3-vI-NXe">
+                                <rect key="frame" x="20" y="550" width="560" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.49506870567375888" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Glömt lösenord"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="h6Q-46-2ni">
+                                <rect key="frame" x="169" y="20" width="263" height="218"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="218" id="N75-FO-38G"/>
+                                    <constraint firstAttribute="width" constant="263" id="yvQ-Ey-MkR"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1nP-j4-7Pf">
+                                <rect key="frame" x="20" y="416" width="560" height="30"/>
+                                <color key="backgroundColor" red="0.050980392156862744" green="0.38039215686274508" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Logga in via Facebook"/>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RiQ-sN-moI">
+                                <rect key="frame" x="20" y="291" width="560" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ihA-qJ-j4J"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                        <color key="value" red="0.8917293848167539" green="0.8917293848167539" blue="0.8917293848167539" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Lösenord" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kpb-nD-LA9">
+                                <rect key="frame" x="20" y="329" width="560" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="wC2-lR-UoW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                        <color key="value" red="0.86853730366492143" green="0.86853730366492143" blue="0.86853730366492143" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pom-LT-vWv">
+                                <rect key="frame" x="20" y="378" width="560" height="30"/>
+                                <color key="backgroundColor" red="0.98431372549999996" green="0.82745098039999998" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Logga in"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="swK-2Z-crr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AwP-F2-ltJ"/>
-                            <constraint firstItem="zZm-qX-chb" firstAttribute="centerX" secondItem="swK-2Z-crr" secondAttribute="centerX" id="SCM-Oe-dDC"/>
-                            <constraint firstItem="zZm-qX-chb" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="b4n-ad-0be"/>
-                            <constraint firstItem="zZm-qX-chb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="pQY-6a-BGh"/>
-                            <constraint firstItem="zZm-qX-chb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="qiW-9E-Ydx"/>
-                            <constraint firstItem="zZm-qX-chb" firstAttribute="top" secondItem="swK-2Z-crr" secondAttribute="bottom" constant="-204" id="zxT-KQ-lCV"/>
+                            <constraint firstItem="zZm-qX-chb" firstAttribute="trailing" secondItem="RiQ-sN-moI" secondAttribute="trailing" id="1fu-kv-2EZ"/>
+                            <constraint firstItem="zZm-qX-chb" firstAttribute="leading" secondItem="pom-LT-vWv" secondAttribute="leading" id="2Fr-H6-lK9"/>
+                            <constraint firstItem="zZm-qX-chb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="BYS-pX-RTh"/>
+                            <constraint firstItem="pom-LT-vWv" firstAttribute="top" secondItem="kpb-nD-LA9" secondAttribute="bottom" constant="19" id="Dwo-4i-SLW"/>
+                            <constraint firstAttribute="bottom" secondItem="Fz3-vI-NXe" secondAttribute="bottom" constant="20" symbolic="YES" id="EGG-WE-ZMl"/>
+                            <constraint firstItem="h6Q-46-2ni" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="F7n-v8-6ec"/>
+                            <constraint firstItem="kpb-nD-LA9" firstAttribute="trailing" secondItem="pom-LT-vWv" secondAttribute="trailing" id="ISL-fu-0Rz"/>
+                            <constraint firstItem="1nP-j4-7Pf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Mrj-la-sJT"/>
+                            <constraint firstItem="RiQ-sN-moI" firstAttribute="top" secondItem="h6Q-46-2ni" secondAttribute="bottom" constant="53" id="OAF-uQ-x56"/>
+                            <constraint firstItem="RiQ-sN-moI" firstAttribute="leading" secondItem="kpb-nD-LA9" secondAttribute="leading" id="P27-gP-iu2"/>
+                            <constraint firstItem="RiQ-sN-moI" firstAttribute="trailing" secondItem="kpb-nD-LA9" secondAttribute="trailing" id="QT0-D1-T3j"/>
+                            <constraint firstItem="6ZP-QQ-Bql" firstAttribute="leading" secondItem="Fz3-vI-NXe" secondAttribute="leading" id="aMR-HA-9gf"/>
+                            <constraint firstItem="kpb-nD-LA9" firstAttribute="leading" secondItem="pom-LT-vWv" secondAttribute="leading" id="cjn-en-xHT"/>
+                            <constraint firstItem="1nP-j4-7Pf" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="cv3-Dg-vXR"/>
+                            <constraint firstItem="pom-LT-vWv" firstAttribute="leading" secondItem="6ZP-QQ-Bql" secondAttribute="leading" id="ex5-Sd-ED7"/>
+                            <constraint firstItem="pom-LT-vWv" firstAttribute="trailing" secondItem="6ZP-QQ-Bql" secondAttribute="trailing" id="fsd-Uj-Au7"/>
+                            <constraint firstItem="1nP-j4-7Pf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="396" id="iRC-pV-Su8"/>
+                            <constraint firstItem="zZm-qX-chb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="idX-la-rMY"/>
+                            <constraint firstItem="zZm-qX-chb" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="lFD-pQ-mM0"/>
+                            <constraint firstItem="h6Q-46-2ni" firstAttribute="centerX" secondItem="RiQ-sN-moI" secondAttribute="centerX" id="oc4-ks-GOl"/>
+                            <constraint firstItem="kpb-nD-LA9" firstAttribute="top" secondItem="RiQ-sN-moI" secondAttribute="bottom" constant="8" symbolic="YES" id="rIg-g7-bwU"/>
+                            <constraint firstItem="zZm-qX-chb" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="tD5-hx-sdE"/>
+                            <constraint firstItem="6ZP-QQ-Bql" firstAttribute="trailing" secondItem="Fz3-vI-NXe" secondAttribute="trailing" id="uI0-ic-Uft"/>
+                            <constraint firstItem="Fz3-vI-NXe" firstAttribute="top" secondItem="6ZP-QQ-Bql" secondAttribute="bottom" constant="8" symbolic="YES" id="y8l-VS-Erz"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -100,5 +171,6 @@
     </scenes>
     <resources>
         <image name="bg_moreblur" width="2362" height="1581"/>
+        <image name="logo" width="1300" height="1300"/>
     </resources>
 </document>
