--- a/Pantarevir/Base.lproj/Main.storyboard
+++ b/Pantarevir/Base.lproj/Main.storyboard
@@ -70,13 +70,6 @@
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Glömt lösenord"/>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="h6Q-46-2ni">
-                                <rect key="frame" x="169" y="20" width="263" height="218"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="218" id="N75-FO-38G"/>
-                                    <constraint firstAttribute="width" constant="263" id="yvQ-Ey-MkR"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1nP-j4-7Pf">
                                 <rect key="frame" x="20" y="416" width="560" height="30"/>
                                 <color key="backgroundColor" red="0.050980392156862744" green="0.38039215686274508" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
@@ -119,26 +112,25 @@
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Logga in"/>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PANTAREVIR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w8L-n9-Kvg">
-                                <rect key="frame" x="221" y="104" width="158" height="50"/>
-                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="26"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logotext" translatesAutoresizingMaskIntoConstraints="NO" id="h6Q-46-2ni">
+                                <rect key="frame" x="176" y="20" width="249" height="252"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="252" id="b9m-br-2Tk"/>
+                                    <constraint firstAttribute="width" constant="249" id="qE5-RG-iWf"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="zZm-qX-chb" firstAttribute="trailing" secondItem="RiQ-sN-moI" secondAttribute="trailing" id="1fu-kv-2EZ"/>
                             <constraint firstItem="zZm-qX-chb" firstAttribute="leading" secondItem="pom-LT-vWv" secondAttribute="leading" id="2Fr-H6-lK9"/>
                             <constraint firstItem="zZm-qX-chb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="BYS-pX-RTh"/>
+                            <constraint firstItem="h6Q-46-2ni" firstAttribute="centerX" secondItem="RiQ-sN-moI" secondAttribute="centerX" id="CRF-Z7-KLk"/>
                             <constraint firstItem="pom-LT-vWv" firstAttribute="top" secondItem="kpb-nD-LA9" secondAttribute="bottom" constant="19" id="Dwo-4i-SLW"/>
                             <constraint firstAttribute="bottom" secondItem="Fz3-vI-NXe" secondAttribute="bottom" constant="20" symbolic="YES" id="EGG-WE-ZMl"/>
-                            <constraint firstItem="h6Q-46-2ni" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="F7n-v8-6ec"/>
-                            <constraint firstItem="w8L-n9-Kvg" firstAttribute="centerX" secondItem="RiQ-sN-moI" secondAttribute="centerX" id="H64-nl-7vR"/>
+                            <constraint firstItem="h6Q-46-2ni" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="IN4-ay-aZ9"/>
                             <constraint firstItem="kpb-nD-LA9" firstAttribute="trailing" secondItem="pom-LT-vWv" secondAttribute="trailing" id="ISL-fu-0Rz"/>
-                            <constraint firstItem="w8L-n9-Kvg" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="84" id="Kt1-Bq-iOh"/>
                             <constraint firstItem="1nP-j4-7Pf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Mrj-la-sJT"/>
-                            <constraint firstItem="RiQ-sN-moI" firstAttribute="top" secondItem="h6Q-46-2ni" secondAttribute="bottom" constant="53" id="OAF-uQ-x56"/>
                             <constraint firstItem="RiQ-sN-moI" firstAttribute="leading" secondItem="kpb-nD-LA9" secondAttribute="leading" id="P27-gP-iu2"/>
                             <constraint firstItem="RiQ-sN-moI" firstAttribute="trailing" secondItem="kpb-nD-LA9" secondAttribute="trailing" id="QT0-D1-T3j"/>
                             <constraint firstItem="6ZP-QQ-Bql" firstAttribute="leading" secondItem="Fz3-vI-NXe" secondAttribute="leading" id="aMR-HA-9gf"/>
@@ -148,10 +140,9 @@
                             <constraint firstItem="pom-LT-vWv" firstAttribute="trailing" secondItem="6ZP-QQ-Bql" secondAttribute="trailing" id="fsd-Uj-Au7"/>
                             <constraint firstItem="1nP-j4-7Pf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="396" id="iRC-pV-Su8"/>
                             <constraint firstItem="zZm-qX-chb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="idX-la-rMY"/>
-                            <constraint firstItem="w8L-n9-Kvg" firstAttribute="centerY" secondItem="h6Q-46-2ni" secondAttribute="centerY" id="iqa-iS-buM"/>
                             <constraint firstItem="zZm-qX-chb" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="lFD-pQ-mM0"/>
-                            <constraint firstItem="h6Q-46-2ni" firstAttribute="centerX" secondItem="RiQ-sN-moI" secondAttribute="centerX" id="oc4-ks-GOl"/>
                             <constraint firstItem="kpb-nD-LA9" firstAttribute="top" secondItem="RiQ-sN-moI" secondAttribute="bottom" constant="8" symbolic="YES" id="rIg-g7-bwU"/>
+                            <constraint firstItem="RiQ-sN-moI" firstAttribute="top" secondItem="h6Q-46-2ni" secondAttribute="bottom" constant="19" id="rae-8Q-tqT"/>
                             <constraint firstItem="zZm-qX-chb" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="tD5-hx-sdE"/>
                             <constraint firstItem="6ZP-QQ-Bql" firstAttribute="trailing" secondItem="Fz3-vI-NXe" secondAttribute="trailing" id="uI0-ic-Uft"/>
                             <constraint firstItem="Fz3-vI-NXe" firstAttribute="top" secondItem="6ZP-QQ-Bql" secondAttribute="bottom" constant="8" symbolic="YES" id="y8l-VS-Erz"/>
@@ -295,5 +286,6 @@
     <resources>
         <image name="bg_moreblur" width="2362" height="1581"/>
         <image name="logo" width="1300" height="1300"/>
+        <image name="logotext" width="792" height="792"/>
     </resources>
 </document>
